# mp3huntr

./: .gitignore  LICENSE  README.md  app.conf.example  mp3huntr.cabal
src/: Mp3Huntr.hs
src/Web/: Mp3Convertr.hs  NicoVideoHuntr.hs  YouTubeHuntr.hs
test/: Spec.hs
test/Test/: NicoVideoHuntrSpec.hs  YouTubeHuntrSpec.hs
tool/: bookmarklet.js
