name:                mp3huntr
version:             0.1.0.0
synopsis:            Download youtube and nicovideo and convert video to mp3
description:         Download youtube and nicovideo and convert video to mp3
license:             BSD3
license-file:        LICENSE
author:              Masahiro Yamauchi
maintainer:          sgt.yamauchi@gmail.com
copyright:           Masahiro Yamauchi <sgt.yamauchi@gmail.com>
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable mp3huntr
  main-is:             Mp3Huntr.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.8
                     , scotty >=0.6.2 && <0.8
                     , HTTP >=4000.2.10 && <4000.3
                     , text >=1.0.0.1 && <1.2
                     , process >=1.1.0.2 && <1.3
                     , transformers >=0.3.0.0 && <0.4
                     , network >=2.4.2.2 && <2.5
                     , temporary >=1.2.0.1 && <1.3
                     , ConfigFile >=1.1.1 && <1.2
                     , MissingH >=1.2.0.2 && < 1.3
                     , mtl >=2.1.2 && <2.2
                     , filepath >=1.3.0.1 && <1.4
                     , bytestring >=0.10.0.2 && <0.11
                     , http-types >=0.8.3 && <0.9
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  main-is:             Spec.hs
  build-depends:       base >=4.6 && <4.8
                     , scotty >=0.6.2 && <0.8
                     , HTTP >=4000.2.10 && <4000.3
                     , text >=1.0.0.1 && <1.2
                     , process >=1.1.0.2 && <1.3
                     , transformers >=0.3.0.0 && <0.4
                     , network >=2.4.2.2 && <2.5
                     , temporary >=1.2.0.1 && <1.3
                     , ConfigFile >=1.1.1 && <1.2
                     , MissingH >=1.2.0.2 && < 1.3
                     , mtl >=2.1.2 && <2.2
                     , filepath >=1.3.0.1 && <1.4
                     , bytestring >=0.10.0.2 && <0.11
                     , http-types >=0.8.3 && <0.9
                     , hspec >=1.8.1.1 && < 2.0
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  default-language:    Haskell2010
